--- a/src/main/resources/nachrichten.properties
+++ b/src/main/resources/nachrichten.properties
@@ -1,5 +1,5 @@
 
 jakarta.faces.component.UIInput.REQUIRED = Diese Eingabe ist erforderlich.
-jakarta.faces.validator.RegexValidator.NOT_MATCHED = Bitte Format folgen (''{0}'')
+jakarta.faces.validator.RegexValidator.NOT_MATCHED = Bitte geben Sie eine gültige E-Mail Adresse ein.
 login.error=Benutzername oder Passwort ist falsch.
 login.userNotFound=Benutzername nicht gefunden. Bitte registrieren Sie sich.
