Einbindung mySQL datenbank

--- a/.dbeaver/project-metadata.json
+++ b/.dbeaver/project-metadata.json
@@ -1,1 +1,1 @@
-{"resources":{"Scripts/Script.sql":{"default-datasource":"derby_server-1911eace60d-542c88fa5d0be4d2","default-schema":"ADMIN"}}}
+{"resources":{}}
